--- a/Final_LFQ_MSstats_analysis.Rmd
+++ b/Final_LFQ_MSstats_analysis.Rmd
@@ -192,35 +192,35 @@ save(MSstats_processed_no_normalisation, file = paste0(output_dir, "LFQ_processe
 These plots are from functions built-in to `MSstats` and are for quality control.
 
 ```{r data visualisation, echo = FALSE}
-# This produces a boxplot, of intensity by sample. Used as a basic way to check normalisation
-dataProcessPlots(MSstats_processed,
-  type = "QCplot",
-  ylimDown = 0,
-  which.Protein = "allonly",
-  width = 7,
-  height = 7,
-  address = paste0(output_dir, "MSstats_")
-)
-
-# Produces individual plots for the different proteins, each peptide shown in a different colour
-dataProcessPlots(MSstats_processed,
-  type = "Profileplot",
-  ylimDown = 0,
-  originalPlot = TRUE,
-  summaryPlot = TRUE,
-  width = 7,
-  height = 7,
-  address = paste0(output_dir, "MSstats_")
-)
-
-# Produces a plot for each protein, with the estimated abundance for each protein as based on the modified mixed linear effects model used by `MSstats`
-dataProcessPlots(MSstats_processed,
-  type = "Conditionplot",
-  ylimDown = 0,
-  width = 7,
-  height = 7,
-  address = paste0(output_dir, "MSstats_")
-)
+# # This produces a boxplot, of intensity by sample. Used as a basic way to check normalisation
+# dataProcessPlots(MSstats_processed,
+#   type = "QCplot",
+#   ylimDown = 0,
+#   which.Protein = "allonly",
+#   width = 7,
+#   height = 7,
+#   address = paste0(output_dir, "MSstats_")
+# )
+# 
+# # Produces individual plots for the different proteins, each peptide shown in a different colour
+# dataProcessPlots(MSstats_processed,
+#   type = "Profileplot",
+#   ylimDown = 0,
+#   originalPlot = TRUE,
+#   summaryPlot = TRUE,
+#   width = 7,
+#   height = 7,
+#   address = paste0(output_dir, "MSstats_")
+# )
+# 
+# # Produces a plot for each protein, with the estimated abundance for each protein as based on the modified mixed linear effects model used by `MSstats`
+# dataProcessPlots(MSstats_processed,
+#   type = "Conditionplot",
+#   ylimDown = 0,
+#   width = 7,
+#   height = 7,
+#   address = paste0(output_dir, "MSstats_")
+# )
 ```
 
 # Model-based comparison, and adjusted p-value
@@ -270,64 +270,64 @@ write.csv(MSstats_results, file = paste(output_dir, "MSstatsResults.csv", sep = 
 # Comparison plots
 
 ```{r comparison plots, echo = FALSE}
-# Individual plots of log2FC with error bars for each protein
-groupComparisonPlots(
-  data = MSstats_results,
-  type = "ComparisonPlot",
-  width = 6,
-  height = 6,
-  address = paste(output_dir, "MSstats_")
-)
+# # Individual plots of log2FC with error bars for each protein
+# groupComparisonPlots(
+#   data = MSstats_results,
+#   type = "ComparisonPlot",
+#   width = 6,
+#   height = 6,
+#   address = paste(output_dir, "MSstats_")
+# )
 ```
 
 # Volcano plots
 
 ```{r volcano plots}
-# Basic volcano plot of results using `MSstats` function
-groupComparisonPlots(
-  data = MSstats.results,
-  type = "VolcanoPlot",
-  width = 6,
-  height = 6,
-  address = paste(output_dir, "MSstats_")
-)
-
-# Volcano plot using old code
-EnhancedVolcano(MSstats.results,
-  lab = rownames(MSstats.results),
-  x = "log2FC",
-  y = "adj.pvalue",
-  FCcutoff = 1,
-  pCutoff = 0.05
-)
-
-# Define colours for use in ggplot
-colours <- c("red", "blue", "black")
-names(colours) <- c("Upregulated", "Downregulated", "Not significant")
-
-# Start for loop to generate plots by comparison
-for (comp in unique(MSstats.results$Label)) {
-  # Volcano plot using ggplot
-  volcano <- MSstats.results %>%
-    filter(Label == comp) %>%
-    ggplot(aes(x = log2FC, y = -log10(adj.pvalue), col = Dif)) +
-    geom_vline(xintercept = c(-1, 1), linetype = "dashed", colour = "black") +
-    geom_hline(yintercept = -log10(0.05), linetype = "dashed", colour = "red") +
-    geom_point(alpha = 0.25, show.legend = FALSE) +
-    scale_color_manual(values = colours) +
-    ylab("-Log10(adjusted p-value)") +
-    xlab("Log2 fold change") +
-    ggtitle(paste("Volcano plot of", comp))
-
-  # Save plot
-  ggsave(
-    filename = paste(output_dir, comp, "_ggvolcano.png", sep = ""),
-    plot = volcano,
-    width = 6,
-    height = 6
-  )
-}
-# End plotting loop
+# # Basic volcano plot of results using `MSstats` function
+# groupComparisonPlots(
+#   data = MSstats.results,
+#   type = "VolcanoPlot",
+#   width = 6,
+#   height = 6,
+#   address = paste(output_dir, "MSstats_")
+# )
+# 
+# # Volcano plot using old code
+# EnhancedVolcano(MSstats.results,
+#   lab = rownames(MSstats.results),
+#   x = "log2FC",
+#   y = "adj.pvalue",
+#   FCcutoff = 1,
+#   pCutoff = 0.05
+# )
+# 
+# # Define colours for use in ggplot
+# colours <- c("red", "blue", "black")
+# names(colours) <- c("Upregulated", "Downregulated", "Not significant")
+# 
+# # Start for loop to generate plots by comparison
+# for (comp in unique(MSstats.results$Label)) {
+#   # Volcano plot using ggplot
+#   volcano <- MSstats.results %>%
+#     filter(Label == comp) %>%
+#     ggplot(aes(x = log2FC, y = -log10(adj.pvalue), col = Dif)) +
+#     geom_vline(xintercept = c(-1, 1), linetype = "dashed", colour = "black") +
+#     geom_hline(yintercept = -log10(0.05), linetype = "dashed", colour = "red") +
+#     geom_point(alpha = 0.25, show.legend = FALSE) +
+#     scale_color_manual(values = colours) +
+#     ylab("-Log10(adjusted p-value)") +
+#     xlab("Log2 fold change") +
+#     ggtitle(paste("Volcano plot of", comp))
+# 
+#   # Save plot
+#   ggsave(
+#     filename = paste(output_dir, comp, "_ggvolcano.png", sep = ""),
+#     plot = volcano,
+#     width = 6,
+#     height = 6
+#   )
+# }
+# # End plotting loop
 ```
 
 # Heatmaps
@@ -335,27 +335,41 @@ for (comp in unique(MSstats.results$Label)) {
 Basic heatmap of proteins in processed data
 
 ```{r heatmap unfiltered, echo=FALSE}
-# create a matrix of protein abundance
-prot_mat <- processed$ProteinLevelData %>%
-  select(Protein, originalRUN, LogIntensities) %>%
-  pivot_wider(names_from = originalRUN, values_from = LogIntensities)
-# set row names as the proteins
-rownames(prot_mat) <- prot_mat$Protein
-# convert to matrix and remove row of protein names
-prot_mat <- prot_mat[, -1] %>% as.matrix()
+# # create a matrix of protein abundance
+# prot_mat <- processed$ProteinLevelData %>%
+#   select(Protein, originalRUN, LogIntensities) %>%
+#   pivot_wider(names_from = originalRUN, values_from = LogIntensities)
+# # set row names as the proteins
+# rownames(prot_mat) <- prot_mat$Protein
+# # convert to matrix and remove row of protein names
+# prot_mat <- prot_mat[, -1] %>% as.matrix()
+# 
+# # create annotations for sample type
+# column_ha <- HeatmapAnnotation(Condition = annot_col$Condition)
+# # create heatmap of gene expression, scaled rows (genes)
+# t(scale(t(prot_mat))) %>%
+#   Heatmap(
+#     row_title = "Proteins",
+#     column_title = "Unfiltered proteome heatmap",
+#     show_row_dend = FALSE,
+#     show_column_dend = TRUE,
+#     column_names_gp = gpar(fontsize = 8),
+#     bottom_annotation = column_ha,
+#     show_row_names = FALSE,
+#     show_heatmap_legend = FALSE
+#   )
+```
 
-# create annotations for sample type
-column_ha <- HeatmapAnnotation(Condition = annot_col$Condition)
-# create heatmap of gene expression, scaled rows (genes)
-t(scale(t(prot_mat))) %>%
-  Heatmap(
-    row_title = "Proteins",
-    column_title = "Unfiltered proteome heatmap",
-    show_row_dend = FALSE,
-    show_column_dend = TRUE,
-    column_names_gp = gpar(fontsize = 8),
-    bottom_annotation = column_ha,
-    show_row_names = FALSE,
-    show_heatmap_legend = FALSE
+# Session information
+Save file of session information
+```{r SessionInfo}
+writeLines(
+  capture.output(sessionInfo()),
+  paste0(
+    output_dir,
+    "logs/sessionInfo_",
+    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+    ".txt"
+    )
   )
 ```
