--- a/Final_TMT_MSstats_analysis.Rmd
+++ b/Final_TMT_MSstats_analysis.Rmd
@@ -32,6 +32,7 @@ library(vroom) # Fast data loading
 library(dplyr) # Data manipulation
 library(tidyr) # Split column into multiple rows for weighted peptides input
 library(stringr) # Renaming PSM column names
+library(data.table) # Convert data.frame to data.table for weighted peptide input
 ```
 
 # Functions
@@ -131,17 +132,18 @@ MSstatsTMT_input <- separate_longer_delim(PSMs, cols = Protein.Accessions, delim
       as.factor
     ),
     PSM = as.character(PSM)
-  )
+  ) %>%
+  # Convert to data.table for igraph etc. input
+  as.data.table
   
 # Create graph of protein clusters
-pp_graph <- igraph::graph_from_data_frame(
-  unique(MSstatsTMT_input[,c("ProteinName", "PeptideSequence")]), directed = FALSE)
-
-# Add protein clusters
-MSstatsTMT_input <- addClusterMembership(MSstatsTMT_input, pp_graph)
+pp_graph <- createPeptideProteinGraph(MSstatsTMT_input)
 
 # Normalise
 MSstatsTMT_input <- normalizeSharedPeptides(MSstatsTMT_input)
+
+# Add protein clusters
+MSstatsTMT_input <- addClusterMembership(MSstatsTMT_input, pp_graph)
 ```
 
 # Weighted processing
